@@ -1,3 +1,7 @@
+	* Fixed bug in RSS.configure; no aliases could be added.
+	
+	* Changed Alias.freeze to Alias.lock.
+	
 	* Fixed sorting in Status' uptime database.
 	
 	* Updated the Gameknot tests for expired games.
